--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,19 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My App</title>
+
+        <style>
+            body {
+                font-family: system-ui;
+                background: #f06d06;
+                color: white;
+                text-align: center;
+            }
+        </style>
     </head>
+
     <body>
-        <h1>Hello, Nishant!</h1>
+        <h1>👋 Hello, Nishant!</h1>
         <p>Welcome to my app.</p>
     </body>
 </html>
